# Robotics-Studio-1

./: CMakeLists.txt  README.md  package.xml
install/: local_setup.sh  setup.sh
log/: latest_build
maps/: cart_world_final.pgm  cart_world_final.yaml  cart_world_final5.pgm  cart_world_final5.yaml  cartographer_map.pgm  cartographer_map.yaml  final_world.pgm  final_world.yaml  map.bt  map.pcd  map.yaml  overlaid_map.pgm  overlaid_map1.pgm  overlaid_map2.pgm  world_final.bt  world_final.pcd  world_final.yaml
src/: Doxyfile  cylinder_detector.cpp  index.dox  lab1.cpp  lab2.cpp  lab4.cpp  lab5.cpp  map_compare.cpp  nav_to_goal.cpp  sprint2.cpp
src/html/: annotated.html  classCylinderDetector-members.html  classCylinderDetector.html  classCylinderDetector__coll__graph.map  classCylinderDetector__inherit__graph.md5  classDeadReckoningNode-members.html  classDeadReckoningNode.html  classDeadReckoningNode__coll__graph.map  classDeadReckoningNode__coll__graph.md5  classImageProcessor-members.html  classImageProcessor.html  classImageProcessor__coll__graph.md5  classImageProcessor__inherit__graph.map  classLaserScanProcessor-members.html  classLaserScanProcessor.html  classLaserScanProcessor__coll__graph.map  classLaserScanProcessor__coll__graph.md5  classMapCompareNode-members.html  classMapCompareNode.html  classMapCompareNode__coll__graph.md5  classMapCompareNode__inherit__graph.map  classScanMatchingLocalizer-members.html  classScanMatchingLocalizer.html  classScanMatchingLocalizer__coll__graph.map  classScanMatchingLocalizer__coll__graph.md5  classScanToImageNode-members.html  classScanToImageNode.html  classScanToImageNode__inherit__graph.map  classScanToImageNode__inherit__graph.md5  classes.html  cylinder__detector_8cpp.html  cylinder__detector_8cpp__incl.map  cylinder__detector_8cpp__incl.md5  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  (+24 more)
src/latex/: annotated.tex  classCylinderDetector.tex  classCylinderDetector__inherit__graph.md5  classDeadReckoningNode.tex  classDeadReckoningNode__inherit__graph.md5  classImageProcessor.tex  classImageProcessor__inherit__graph.md5  classLaserScanProcessor.tex  classLaserScanProcessor__coll__graph.md5  classMapCompareNode.tex  classMapCompareNode__coll__graph.md5  classScanMatchingLocalizer.tex  classScanMatchingLocalizer__inherit__graph.md5  classScanToImageNode.tex  classScanToImageNode__coll__graph.md5  cylinder__detector_8cpp.tex  cylinder__detector_8cpp__incl.md5  files.tex  hierarchy.tex  index.tex  lab1_8cpp.tex  lab1_8cpp__incl.md5  lab2_8cpp.tex  lab2_8cpp__incl.md5  lab4_8cpp.tex  lab4_8cpp__incl.md5  lab5_8cpp.tex  lab5_8cpp__incl.md5  map__compare_8cpp.tex  refman.tex  (+3 more)
(+64 files in other folders)
